version/0.9/_sources/API/_autosummary/pyaedt.aedt_logger.AedtLogger.rst.txt
AedtLogger
==========

.. currentmodule:: pyaedt.aedt_logger

.. autoclass:: AedtLogger

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      AedtLogger.add_debug_message
      
      
      AedtLogger.add_error_message
      
      
      AedtLogger.add_file_logger
      
      
      AedtLogger.add_info_message
      
      
      AedtLogger.add_logger
      
      
      AedtLogger.add_message
      
      
      AedtLogger.add_warning_message
      
      
      AedtLogger.clear_messages
      
      
      AedtLogger.debug
      
      
      AedtLogger.disable_desktop_log
      
      
      AedtLogger.disable_log_on_file
      
      
      AedtLogger.disable_stdout_log
      
      
      AedtLogger.enable_desktop_log
      
      
      AedtLogger.enable_log_on_file
      
      
      AedtLogger.enable_stdout_log
      
      
      AedtLogger.error
      
      
      AedtLogger.get_messages
      
      
      AedtLogger.info
      
      
      AedtLogger.info_timer
      
      
      AedtLogger.remove_all_project_file_logger
      
      
      AedtLogger.remove_file_logger
      
      
      AedtLogger.reset_timer
      
      
      AedtLogger.warning
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      AedtLogger.aedt_error_messages
      AedtLogger.aedt_info_messages
      AedtLogger.aedt_messages
      AedtLogger.aedt_warning_messages
      AedtLogger.design_logger
      AedtLogger.design_name
      AedtLogger.error_messages
      AedtLogger.glb
      AedtLogger.info_messages
      AedtLogger.logger
      AedtLogger.messages
      AedtLogger.non_graphical
      AedtLogger.odesign
      AedtLogger.oproject
      AedtLogger.project_logger
      AedtLogger.project_name
      AedtLogger.warning_messages
   
   